fine bozza stile e contenuti

--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
             <div class="container">
                 <div class="top-footer clearfix">
                     <div class="top-footer-box">
-                        <div class="top-footer-title">increase your traffic</div>
-                        <ul>
+                        <div class="top-footer-title capitalize ">increase your traffic</div>
+                        <ul class="capitalize">
                             <li><a href="#">ad software</a></li>
                             <li><a href="#">blog software</a></li>
                             <li><a href="#">SEO software</a></li>
@@ -282,36 +282,36 @@
 
                     </div>
                     <div class="top-footer-box">
-                        <div class="top-footer-title">increase your traffic</div>
-                        <ul>
-                            <li><a href="#"></a>ad software</li>
-                            <li><a href="#"></a>blog software</li>
-                            <li><a href="#"></a>SEO software</li>
-                            <li><a href="#"></a>social media software</li>
-                            <li><a href="#">content management system</a> </li>
+                        <div class="top-footer-title capitalize">connect with leads</div>
+                        <ul class="capitalize">
+                            <li><a href="#">find new prospects</a></li>
+                            <li><a href="#">email tracking</a></li>
+                            <li><a href="#">sales email templates</a></li>
+                            <li><a href="#">click to call your leads</a></li>
+                            <li><a href="#">email marketing</a></li>
                         </ul>
 
                     </div>
                     <div class="top-footer-box">
-                        <div class="top-footer-title">increase your traffic</div>
-                        <ul>
-                            <li><a href="#"></a>ad software</li>
-                            <li><a href="#"></a>blog software</li>
-                            <li><a href="#"></a>SEO software</li>
-                            <li><a href="#"></a>social media software</li>
-                            <li><a href="#">content management system</a> </li>
+                        <div class="top-footer-title capitalize">close and manage leads</div>
+                        <ul class="capitalize">
+                            <li><a href="#">document tracking tool</a></li>
+                            <li><a href="#">meeting schedule tool</a></li>
+                            <li><a href="#">sales automation tool</a></li>
+                            <li><a href="#">lead management tool</a></li>
+                            <li><a href="#">pipeline management tool</a></li>
                         </ul>
 
                     </div>
                     <div class="top-footer-box">
-                        <div class="top-footer-title">increase your traffic</div>
+                        <div class="top-footer-title">Support and Tools</div>
                         <ul>
-                            <li><a href="#"></a>ad software</li>
-                            <li><a href="#"></a>blog software</li>
-                            <li><a href="#"></a>SEO software</li>
-                            <li><a href="#"></a>social media software</li>
-                            <li><a href="#">content management system</a> </li>
-                            <li><button type="button" name="button">Contact HubSpot Support</button></li>
+                            <li><a href="#">HubSpot Partners</a></li>
+                            <li><a href="#">Join a Local User Group</a></li>
+                            <li><a href="#">Get a Free Website Report</a></li>
+                            <li><a href="#">HubSpot Templates</a></li>
+                            <li><a href="#">Free Tools & Generators  <i class="fas fa-chevron-down"></i></a></li>
+                            <li><button class="btn-small btn-footer" type="button" name="button">Contact HubSpot Support</button></li>
                             <li class="footer-loghi">
                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#"><i class="fab fa-instagram"></i></a>
@@ -339,13 +339,13 @@
                 <div class="footer-bottom clearfix">
                     <div class="footer-bottom-left">
                         <img src="https://web.archive.org/web/20191130185659im_/https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_gray.svg" alt="HubSpot logo-gray">
+                        <div class="footer-copy">Copyright © 2019 HubSpot, Inc.</div>
                     </div>
                     <div class="footer-bottom-right">
                         <a href="#">legal stuff</a>
                         <a href="#">privacy policy</a>
                     </div>
-                </div>
-                <div class="footer-copy">Copyright © 2019 HubSpot, Inc.</div>
+                </div>                
             </div>
         </footer>
 
