--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <li><i class="fas fa-check-circle"></i> marketing automation</li>
                             <li><i class="fas fa-check-circle"></i> analytics</li>
                         </ul>
-                        <button class="btn-small btn-orange" type="button" name="button">learn more</button>
+                        <button class="btn-small btn-orange" type="button" name="button">Learn more</button>
 
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                             <li><i class="fas fa-check-circle"></i> marketing automation</li>
                             <li><i class="fas fa-check-circle"></i> analytics</li>
                         </ul>
-                        <button class="btn-small btn-orange"type="button" name="button">learn more</button>
+                        <button class="btn-small btn-orange"type="button" name="button">Learn more</button>
                     </div>
                 </div>
                 <div class="card">
@@ -135,7 +135,7 @@
                             <li><i class="fas fa-check-circle"></i> marketing automation</li>
                             <li><i class="fas fa-check-circle"></i> analytics</li>
                         </ul>
-                        <button class="btn-small btn-orange" type="button" name="button">learn more</button>
+                        <button class="btn-small btn-orange" type="button" name="button">Learn more</button>
                     </div>
                 </div>
 
