--- a/index.html
+++ b/index.html
@@ -2,20 +2,19 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <link rel="icon" type="image/png" href="https://avatars2.githubusercontent.com/u/326419?s=280&v=4"/>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
         <link rel="stylesheet" href="css/style.css">
-        <title>HubSpot</title>
+        <title>HubSpot | Inbound Marketing</title>
     </head>
     <body>
-
-
         <div class="fixed-bar clearfix">
             <div class="container">
                 <div class="fixed-bar-left">
                     <ul>
-                        <li> <a id="trattino" href="#"><i class="fas fa-globe-europe"></i> english <i class="fas fa-chevron-down"></i></a></li>
-                        <li> <a href="#">contact sales</a></li>
+                        <li><a id="trattino" href="#"><i class="fas fa-globe-europe"></i> english <i class="fas fa-chevron-down"></i></a></li>
+                        <li><a href="#">contact sales</a></li>
 
                     </ul>
                 </div>
@@ -62,12 +61,12 @@
         </header>
         <main>
             <div class="container">
-                <div class="top box">
+                <div class="big-top-box">
                     <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/2018/Integrations_Illustration@2x.png" alt="cube">
                     <h2>Powerful Alone. Better together</h2>
                     <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They’re powerful alone — but even better when used together.</p>
                 </div>
-                <div class="bottom box clearfix">
+                <div class="big-bottom-box clearfix">
                     <div class="container-padding">
 
                         <div class="box-bottom-left">
@@ -92,7 +91,7 @@
                 </div>
             </div>
             <div class="container clearfix">
-                <div class="card">
+                <div class="cards">
                     <div class="card-container">
                         <img src="https://www.hubspot.com/hubfs/Marketing-Hub-Free.svg" alt="circles">
                         <h4>marketing hub</h4>
@@ -108,7 +107,7 @@
 
                     </div>
                 </div>
-                <div class="card">
+                <div class="cards">
                     <div class="card-container">
                         <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Sales-Professional-Illustration.svg" alt="circles">
                         <h4>sales hub</h4>
@@ -123,7 +122,7 @@
                         <button class="btn-small btn-orange"type="button" name="button">Learn more</button>
                     </div>
                 </div>
-                <div class="card">
+                <div class="cards">
                     <div class="card-container">
                         <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Service-Hub-Illustration.svg" alt="circles">
                         <h4>service hub</h4>
@@ -147,7 +146,7 @@
                     <h2>Learn and grow with award-winning support and thriving community behind you.</h2>
                     <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
                 </div>
-                <div class="icons-box">
+                <div class="big-icons-box">
                     <div class="first-row clearfix">
                         <div class="icon-box">
                             <div class="icon-box-container">
@@ -190,7 +189,7 @@
                         <div class="icon-box">
                             <div class="icon-box-container">
                                 <img src="https://web.archive.org/web/20191130185645im_/https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_globe.svg" alt="hands">
-                                <h2>6</h2>
+                                <h2 id="no-plus">6</h2>
                                 <p>languages</p>
                             </div>
                         </div>
