inizio menù a tendina

--- a/index.html
+++ b/index.html
@@ -13,12 +13,20 @@
             <div class="container">
                 <div class="fixed-bar-left">
                     <ul>
-                        <li><a id="trattino" href="#"><i class="fas fa-globe-europe"></i> english <i class="fas fa-chevron-down"></i></a></li>
+                        <li class="show">
+                            <a id="trattino" href="#"><i class="fas fa-globe-europe"></i> english <i class="fas fa-chevron-down"></i></a>
+                            <ul id="choose">
+                                <li>日本語</li>
+                                <li>Deutsch</li>
+                                <li>English</li>
+                                <li>Español</li>
+                                <li>Português</li>
+                                <li>Français</li>
+                            </ul>
+                        </li>
                         <li><a href="#">contact sales</a></li>
-
                     </ul>
                 </div>
-
                 <div class="fixed-bar-right">
                     <a href="#"><i class="fas fa-search"></i></a>
                     <button class="btn-small login" type="button" name="button">Log in</button>
@@ -37,7 +45,12 @@
                     </div>
                     <nav>
                         <ul class="clearfix">
-                            <li><a href="#">software <i class="fas fa-chevron-down"></i></a></li>
+                            <li class="show">
+                                <a href="#">software <i class="fas fa-chevron-down"></i></a>
+                                <div id="software">
+
+                                </div>
+                            </li>
                             <li><a href="#">pricing</a></li><li><a href="#">resources <i class="fas fa-chevron-down"></i></a></li>
                             <li><a href="#">patners <i class="fas fa-chevron-down"></i></a></li>
                             <li><a href="#">about <i class="fas fa-chevron-down"></i></a></li>
@@ -337,7 +350,7 @@
 
                 <div class="footer-bottom clearfix">
                     <div class="footer-bottom-left">
-                        <img src="https://web.archive.org/web/20191130185659im_/https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_gray.svg" alt="HubSpot logo-gray">
+                        <a href="#"><img src="https://web.archive.org/web/20191130185659im_/https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_gray.svg" alt="HubSpot logo-gray"></a>
                         <div class="footer-copy">Copyright © 2019 HubSpot, Inc.</div>
                     </div>
                     <div class="footer-bottom-right">
