2 menù a tendina sito vecchio

--- a/index.html
+++ b/index.html
@@ -48,7 +48,41 @@
                             <li class="show">
                                 <a href="#">software <i class="fas fa-chevron-down"></i></a>
                                 <div id="software">
-
+                                    <div class="dropbox-container">
+                                        <div class="top-dropbox">
+                                            <div class="top-dropbox-title">
+                                                <h3>Free HubSpot CMR</h3>
+                                                <span>All your contacts companies, <strong>100% free</strong></span>
+                                            </div>
+                                        </div>
+                                        <div class="middle-dropbox  clearfix">
+                                            <div class="middle-dropbox-card">
+                                                <div class="middle-card">
+                                                    <h4>Marketing Hub</h4>
+                                                    <p>All-in-one marketing software, starting at <strong>$0/month</strong></p>
+                                                </div>
+                                            </div>
+                                            <div class="middle-dropbox-card">
+                                                <div class="middle-card">
+                                                    <h4>Sales Hub</h4>
+                                                    <p>All-in-one- sales software. starting at <strong>$0/month</strong></p>
+                                                </div>
+                                            </div>
+                                            <div class="middle-dropbox-card">
+                                                <div class="middle-card">
+                                                    <h4>Service Hub</h4>
+                                                    <p>All-in-one customer service software, starting at <strong>$0/month</strong></p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="bottom-dropbox clearfix">
+                                            <div class="bottom-dropbox-left">
+                                                <button class="btn-smallest" type="button" name="button">NEW</button>
+                                                <h3>App Marketplace</h3>
+                                            </div>
+                                            <div class="bottom-dropbox-right"><span>Find Hubspot apps for the tools and software you use to run your business.</span></div>
+                                        </div>
+                                    </div>
                                 </div>
                             </li>
                             <li><a href="#">pricing</a></li><li><a href="#">resources <i class="fas fa-chevron-down"></i></a></li>
