terzo menù a tendina sito vecchio

--- a/index.html
+++ b/index.html
@@ -85,7 +85,74 @@
                                     </div>
                                 </div>
                             </li>
-                            <li><a href="#">pricing</a></li><li><a href="#">resources <i class="fas fa-chevron-down"></i></a></li>
+                            <li><a href="#">pricing</a></li>
+                            <li class="show">
+                                <a href="#">resources <i class="fas fa-chevron-down"></i></a>
+                                <div id="resources">
+                                    <div class="dropbox-container">
+                                        <div class="top-resources clearfix">
+                                            <div class="middle-dropbox-card">
+                                                <div class="middle-card">
+                                                    <h4><a href="">Blog</a></h4>
+                                                    <span><a href="#">Read marketing, sales, agency, and customer success blog content.</a></span>
+                                                </div>
+                                            </div>
+                                            <div class="middle-dropbox-card">
+                                                <div class="middle-card">
+                                                    <h4><a href="#">Customer Sories</a></h4>
+                                                    <span><a href="#">Hear from the business that use HubSpot to grow better every day.</a> </span>
+                                                </div>
+                                            </div>
+                                            <div class="middle-dropbox-card">
+                                                <div class="middle-card">
+                                                    <h4><a href="#">Developers</a></h4>
+                                                    <span><a href="#">Create apps and custom integrations for businesses using HubSpot</a> </span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="middle-resources clearfix">
+                                            <div class="middle-dropbox-card">
+                                                <div class="middle-card">
+                                                    <h4><a href="#">Ebooks, Guides & More</a></h4>
+                                                    <span><a href="#">Get access to HubSpot's mot popular marketing resources.</a> </span>
+                                                </div>
+                                            </div>
+                                            <div class="middle-dropbox-card">
+                                                <div class="middle-card">
+                                                    <h4><a href="#">Onboarding & Services</a></h4>
+                                                    <span><a href="#">Find training and consulting services to help you thrive with HubSpot.</a></span>
+                                                </div>
+                                            </div>
+                                            <div class="middle-dropbox-card">
+                                                <div class="middle-card">
+                                                    <h4><a href="#">Research & Reports</a></h4>
+                                                    <span><a href="#">Get up-to-date research and data on hot business trends.</a></span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="bottom-resources clearfix">
+                                            <div class="middle-dropbox-card">
+                                                <div class="middle-card">
+                                                    <h4><a href="#">Free Courses & Certification</a></h4>
+                                                    <span><a href="#">Take courses on the latest, taught industry experts.</a></span>
+                                                </div>
+                                            </div>
+                                            <div class="middle-dropbox-card">
+                                                <div class="middle-card">
+                                                    <h4><a href="#">What Is Inbound?</a></h4>
+                                                    <span><a href="#">Get a primer on how inbound helps your business grow better.</a></span>
+                                                </div>
+                                            </div>
+                                            <div class="middle-dropbox-card">
+                                                <div class="middle-card">
+                                                    <h4><a href="#">Customer Support</a></h4>
+                                                    <span><a href="#">Get help if you have questions about using HubSpot software.</a></span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
                             <li><a href="#">patners <i class="fas fa-chevron-down"></i></a></li>
                             <li><a href="#">about <i class="fas fa-chevron-down"></i></a></li>
                         </ul>
