--- a/index.html
+++ b/index.html
@@ -51,36 +51,36 @@
                                     <div class="dropbox-container">
                                         <div class="top-dropbox">
                                             <div class="top-dropbox-title">
-                                                <h3>Free HubSpot CMR</h3>
-                                                <span>All your contacts companies, <strong>100% free</strong></span>
+                                                <h3><a href="#">Free HubSpot CMR</a></h3>
+                                                <span><a href="#">All your contacts companies, <strong>100% free</strong></a></span>
                                             </div>
                                         </div>
                                         <div class="middle-dropbox  clearfix">
                                             <div class="middle-dropbox-card">
                                                 <div class="middle-card">
-                                                    <h4>Marketing Hub</h4>
-                                                    <p>All-in-one marketing software, starting at <strong>$0/month</strong></p>
+                                                    <h4><a href="#">Marketing Hub</a></h4>
+                                                    <p><a href="#">All-in-one marketing software, starting at <strong>$0/month</strong></a></p>
                                                 </div>
                                             </div>
                                             <div class="middle-dropbox-card">
                                                 <div class="middle-card">
-                                                    <h4>Sales Hub</h4>
-                                                    <p>All-in-one- sales software. starting at <strong>$0/month</strong></p>
+                                                    <h4><a href="#">Sales Hub</a></h4>
+                                                    <p><a href="#">All-in-one- sales software. starting at <strong>$0/month</strong></a></p>
                                                 </div>
                                             </div>
                                             <div class="middle-dropbox-card">
                                                 <div class="middle-card">
-                                                    <h4>Service Hub</h4>
-                                                    <p>All-in-one customer service software, starting at <strong>$0/month</strong></p>
+                                                    <h4><a href="#">Service Hub</a></h4>
+                                                    <p><a href="#">All-in-one customer service software, starting at <strong>$0/month</strong></a></p>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="bottom-dropbox clearfix">
                                             <div class="bottom-dropbox-left">
                                                 <button class="btn-smallest" type="button" name="button">NEW</button>
-                                                <h3>App Marketplace</h3>
+                                                <h3><a href="#">App Marketplace</a></h3>
                                             </div>
-                                            <div class="bottom-dropbox-right"><span>Find Hubspot apps for the tools and software you use to run your business.</span></div>
+                                            <div class="bottom-dropbox-right"><a href="#"><span>Find Hubspot apps for the tools and software you use to run your business.</span></a></div>
                                         </div>
                                     </div>
                                 </div>
@@ -106,6 +106,7 @@
                                             <div class="middle-dropbox-card">
                                                 <div class="middle-card">
                                                     <h4><a href="#">Developers</a></h4>
+                                                    <button class="btn-smallest" type="button" name="button">NEW</button>
                                                     <span><a href="#">Create apps and custom integrations for businesses using HubSpot</a> </span>
                                                 </div>
                                             </div>
@@ -153,8 +154,64 @@
                                     </div>
                                 </div>
                             </li>
-                            <li><a href="#">patners <i class="fas fa-chevron-down"></i></a></li>
-                            <li><a href="#">about <i class="fas fa-chevron-down"></i></a></li>
+                            <li class="show">
+                                <a href="#">patners <i class="fas fa-chevron-down"></i></a>
+                                <div id="partners">
+                                    <div class="dropbox-container clearfix">
+                                        <div class="partners-left">
+                                            <div class="partners-container">
+                                                <h4><a href="#">Hire a Partner</a> </h4>
+                                                <p><a href="#">Find a partner in our global community of service providers who can help you grow.</a> </p>
+                                            </div>
+                                        </div>
+                                        <div class="partners-right">
+                                            <div class="partners-container">
+                                                <h4><a href="#">Partner With Us</a> </h4>
+                                                <p><a href="#">Explore our sales, agency, and app partnership programs.</a> </p>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="show">
+                                <a href="#">about <i class="fas fa-chevron-down"></i></a>
+                                <div id="about">
+                                    <div class="dropbox-container clearfix">
+                                        <div class="bottom-dropbox-left">
+                                            <div class="partners-container">
+                                                <h4><a href="#">Company</a></h4>
+                                                <ul>
+                                                    <li><a href="#">About us</a> </li>
+                                                    <li><a href="#">Contact us</a> </li>
+                                                    <li><a href="#">Management Team</a> </li>
+                                                    <li><a href="#">Board of Directors</a> </li>
+                                                    <li><a href="#">Careers</a> </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        <div class="bottom-dropbox-left">
+                                            <div class="partners-container">
+                                                <h4><a href="#">News</a></h4>
+                                                <ul>
+                                                    <li><a href="#">HubSpot News</a> </li>
+                                                    <li><a href="#">Press Resources</a> </li>
+                                                    <li><a href="#">Speakers</a> </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        <div class="bottom-dropbox-left">
+                                            <div class="partners-container">
+                                                <h4><a href="#">Inventors</a></h4>
+                                                <ul>
+                                                    <li><a href="#">Inventor Relations</a> </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </li>
                         </ul>
                     </nav>
                 </div>
@@ -423,7 +480,12 @@
                             <li><a href="#">Join a Local User Group</a></li>
                             <li><a href="#">Get a Free Website Report</a></li>
                             <li><a href="#">HubSpot Templates</a></li>
-                            <li><a href="#">Free Tools & Generators  <i class="fas fa-chevron-down"></i></a></li>
+                            <li>
+                                <a href="#">Free Tools & Generators  <i class="fas fa-chevron-down"></i></a>
+                                 class="add-list">
+
+                                </div>
+                            </li>
                             <li><button class="btn-small btn-footer" type="button" name="button">Contact HubSpot Support</button></li>
                             <li class="footer-loghi">
                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
