menù a tendina fixed-bar e nav-bar

--- a/index.html
+++ b/index.html
@@ -179,32 +179,32 @@
                                 <div id="about">
                                     <div class="dropbox-container clearfix">
                                         <div class="bottom-dropbox-left">
-                                            <div class="partners-container">
+                                            <div class="about-container">
                                                 <h4><a href="#">Company</a></h4>
                                                 <ul>
-                                                    <li><a href="#">About us</a> </li>
-                                                    <li><a href="#">Contact us</a> </li>
-                                                    <li><a href="#">Management Team</a> </li>
-                                                    <li><a href="#">Board of Directors</a> </li>
-                                                    <li><a href="#">Careers</a> </li>
+                                                    <li><a href="#">About us</a></li>
+                                                    <li><a href="#">Contact us</a></li>
+                                                    <li><a href="#">Management Team</a></li>
+                                                    <li><a href="#">Board of Directors</a></li>
+                                                    <li><a href="#">Careers</a></li>
                                                 </ul>
                                             </div>
                                         </div>
                                         <div class="bottom-dropbox-left">
-                                            <div class="partners-container">
+                                            <div class="about-container">
                                                 <h4><a href="#">News</a></h4>
                                                 <ul>
-                                                    <li><a href="#">HubSpot News</a> </li>
-                                                    <li><a href="#">Press Resources</a> </li>
-                                                    <li><a href="#">Speakers</a> </li>
+                                                    <li><a href="#">HubSpot News</a></li>
+                                                    <li><a href="#">Press Resources</a></li>
+                                                    <li><a href="#">Speakers</a></li>
                                                 </ul>
                                             </div>
                                         </div>
                                         <div class="bottom-dropbox-left">
-                                            <div class="partners-container">
+                                            <div class="about-container">
                                                 <h4><a href="#">Inventors</a></h4>
                                                 <ul>
-                                                    <li><a href="#">Inventor Relations</a> </li>
+                                                    <li><a href="#">Inventor Relations</a></li>
                                                 </ul>
                                             </div>
                                         </div>
