add footer hide list

--- a/index.html
+++ b/index.html
@@ -480,13 +480,16 @@
                             <li><a href="#">Join a Local User Group</a></li>
                             <li><a href="#">Get a Free Website Report</a></li>
                             <li><a href="">HubSpot Templates</a></li>
-                            <li class="show"><a href="#">Free Tools & Generators  <i class="fas fa-chevron-down"></i></a></li>
-                            <li class="hide">Invoice Template Generator</li>
-                            <li class="hide">Email Signature</li>
-                            <li class="hide">Marketing Plan Template Generator</li>
-                            <li class="hide">Blog Ideas Generator</li>
-                            <li class="hide">Make My Persona</li>
-                            <li class="hide">Business Templates</li>
+                            <li class="show"><a href="#">Free Tools & Generators  <i class="fas fa-chevron-down"></i></a>
+                                <ul>
+                                    <li class="hide">Invoice Template Generator</li>
+                                    <li class="hide">Email Signature</li>
+                                    <li class="hide">Marketing Plan Template Generator</li>
+                                    <li class="hide">Blog Ideas Generator</li>
+                                    <li class="hide">Make My Persona</li>
+                                    <li class="hide">Business Templates</li>
+                                </ul>
+                            </li>
                             <li><button class="btn-small btn-footer" type="button" name="button">Contact HubSpot Support</button></li>
                             <li class="footer-loghi">
                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
