add link languages

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
                         <li class="show">
                             <a id="trattino" href="#"><i class="fas fa-globe-europe"></i> english <i class="fas fa-chevron-down"></i></a>
                             <ul id="choose">
-                                <li>日本語</li>
-                                <li>Deutsch</li>
-                                <li>English</li>
-                                <li>Español</li>
-                                <li>Português</li>
-                                <li>Français</li>
+                                <li><a href="#"> 日本語</a></li>
+                                <li><a href="#">Deutsch</a></li>
+                                <li><a href="#">English</a></li>
+                                <li><a href="#">Español</a></li>
+                                <li><a href="#">Português</a></li>
+                                <li><a href="#">Français</a></li>
                             </ul>
                         </li>
                         <li><a href="#">contact sales</a></li>
